fixed modal gaps

--- a/mobile.css
+++ b/mobile.css
@@ -264,7 +264,7 @@
     height: 404px;
     width: 328px;
     position: static;
-    margin-top: -53px;
+    margin-top: -52px;
   }
 
   .desctop_tba {
